crates/solidity-v2/testing/snapshots/diagnostics_output/resolution/expected_function_in_using_directive/error/generated/solc/0.8.13-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 8187] Error: Expected function name.
   ╭─[input.sol:8:8]
   │
 8 │ using {Err} for T;
   │        ─┬─  
   │         ╰─── Error occurred here.
───╯
